footer spacing fix

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,6 +42,23 @@ h4{
     color:  #00273C;
 }
 
+#cartNum {
+    font-size:30px;
+    font-family: WorkSans-SemiBold;
+    color: #00273C;
+    background-color: #FBD1A7;
+    position: relative;
+    right: 5%;
+    width: 20px;
+    height: 20px;
+}
+
+#ShoppingCart{
+      position: absolute;
+      right: 1%;
+      z-index: 1;
+}
+
 .background-color{
   background-color: #FBD1A7;
 }
@@ -206,6 +223,7 @@ h4{
   font-size: 30px;
   font-weight: bold;
   color: #00273C;
+  margin-left: 2%;
 }
 
 /* Change the background color on mouse-over */
@@ -239,7 +257,7 @@ h4{
   overflow: hidden;
   font-family: WorkSans-semibold;
   float: right;
-
+  margin-right: 2%;
 }
 
 /*style the footer*/
@@ -247,6 +265,7 @@ h4{
   overflow: hidden;
   font-family: WorkSans-semibold;
   float: right;
+  margin-right: 10%;
 }
 
 footer {
